# tcp

./: .cliffignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  flake.nix  shell.nix
examples/: https-v1_0-rustls-std.rs  std-https-v1_0-rustls.rs  tcp-repl-std.rs  tokio-tcp-repl.rs
io/std/: Cargo.toml  README.md
io/std/examples/: read-chunks.rs  read.rs  write.rs
io/std/src/: lib.rs
lib/: Cargo.toml  README.md
lib/src/: io.rs  lib.rs  state.rs
lib/src/flow/: mod.rs  read.rs  write.rs
src/: io.rs  lib.rs  state.rs
src/coroutines/: mod.rs  read-exact.rs  read-to-end.rs  read.rs  write.rs
src/handlers/: mod.rs  std.rs
src/runtimes/: mod.rs  std.rs  tokio.rs
