[package]
name = "io-stream"
description = "Set of I/O-free coroutines and runtimes to manage streams"
version = "1.0.0"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = ["api-bindings"]
keywords = ["io-free", "coroutine", "runtime", "stream", "read-write"]
homepage = "https://pimalaya.org"
documentation = "https://docs.rs/io-stream/latest/io_stream"
repository = "https://github.com/pimalaya/io-stream"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
std = []
tokio = ["dep:tokio"]

[dev-dependencies]
env_logger = "0.11"
memchr = "2.7"
rustls = "0.23"
rustls-platform-verifier = "0.5"
tokio = { version = "1", features = ["full"] }
url = "2.5"
uuid = { version = "1", features = ["v4"] }

[dependencies]
log = "0.4"
tokio = { version = "1", default-features = false, features = ["io-util"], optional = true }
