[package]
name = "stream-flows"
description = "I/O-free library to read from and write into streams"
version = "0.1.0"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = []
keywords = ["stream", "io-free", "flow", "read", "write"]
homepage = "https://pimalaya.org"
documentation = "https://docs.rs/stream-flows/latest/stream_flows"
repository = "https://github.com/pimalaya/stream"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = []

[dev-dependencies]
env_logger = "0.11"
memchr = "2.7"
rustls = "0.23"
rustls-platform-verifier = "0.5"
url = "2.5"
uuid = { version = "1", features = ["v4"] }

[dependencies]
log = "0.4"
